# udi_rtk_ldiar_calib

./: CMakeLists.txt  README.md
Log/: back_end_optimization_node.ERROR  back_end_optimization_node.FATAL  back_end_optimization_node.INFO  back_end_optimization_node.WARNING  back_end_optimization_node.gj.gj.log.INFO.20220804-183701.29136  back_end_optimization_node.gj.gj.log.WARNING.20220809-105311.31811  calib_lidar_imu_node.INFO  calib_lidar_imu_node.gj-R9000P.gj.log.ERROR.20220709-145050.22568  calib_lidar_imu_node.gj-R9000P.gj.log.ERROR.20220709-145201.23643  calib_lidar_imu_node.gj-R9000P.gj.log.ERROR.20220710-000406.12053  calib_lidar_imu_node.gj-R9000P.gj.log.ERROR.20220710-000735.13456  calib_lidar_imu_node.gj-R9000P.gj.log.ERROR.20220710-001120.15410  calib_lidar_imu_node.gj-R9000P.gj.log.ERROR.20220710-004146.22269  calib_lidar_imu_node.gj-R9000P.gj.log.ERROR.20220710-004723.23878  calib_lidar_imu_node.gj-R9000P.gj.log.ERROR.20220719-145400.31767  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220709-144838.18272  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220709-145050.22568  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220709-165925.31371  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220709-170021.32446  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220709-170118.1077  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220712-112927.2375  calib_lidar_imu_node.gj-R9000P.gj.log.WARNING.20220709-165656.29224  calib_lidar_imu_node.gj-R9000P.gj.log.WARNING.20220710-000907.14133  calib_lidar_imu_node.gj-R9000P.gj.log.WARNING.20220710-004449.23071  calib_lidar_imu_node.gj-R9000P.gj.log.WARNING.20220716-135753.21672
cmake/: geographic.cmake
config/: config.yaml
doxygen/: Doxygen.config  footer.tex  header.tex
html/: DualQuaternion_8h.js  DualQuaternion_8h__dep__incl.md5  DualQuaternion_8h__incl.md5  EigenUtils_8h.html  EigenUtils_8h.js  EigenUtils_8h__dep__incl.map  EigenUtils_8h__incl.map  EigenUtils_8h_source.html  annotated_dup.js  back__end__optimization_8cpp.html  back__end__optimization_8hpp.html  back__end__optimization__flow_8cpp__incl.map  back__end__optimization__flow_8hpp.html  back__end__optimization__flow_8hpp__dep__incl.md5  back__end__optimization__flow_8hpp__incl.map  back__end__optimization__flow_8hpp__incl.md5  back__end__optimization__flow_8hpp_source.html  back__end__optimization__node_8cpp.html  back__end__optimization__node_8cpp.js  back__end__optimization__node_8cpp__incl.map  box__filter_8cpp__incl.md5  box__filter_8hpp.html  box__filter_8hpp__dep__incl.md5  box__filter_8hpp_source.html  calib__param__manager_8hpp.html  calib__param__manager_8hpp__incl.map  calib__param__manager_8hpp__incl.md5  calib__param__manager_8hpp_source.html  classcicv_1_1DualQuaternion-members.html  classcicv_1_1DualQuaternion.html  classcicv_1_1DualQuaternion__coll__graph.map  classcicv_1_1DualQuaternion_a1befbf23db12d0afd65f1afb8c76298c_cgraph.md5  classcicv_1_1DualQuaternion_a2230a7eb936dd5d3183a1118e8b46473_cgraph.map  classcicv_1_1DualQuaternion_a2230a7eb936dd5d3183a1118e8b46473_cgraph.md5  classcicv_1_1DualQuaternion_a24c1cbd35a0c224feb392896b35f5fd3_icgraph.md5  classcicv_1_1DualQuaternion_a5f0621dce669c10ff38831a0f75187b9_icgraph.map  classcicv_1_1DualQuaternion_a5f6dd7894232eed82822cdee30bcc611_cgraph.map  classcicv_1_1DualQuaternion_a5f6dd7894232eed82822cdee30bcc611_cgraph.md5  classcicv_1_1DualQuaternion_a5f6dd7894232eed82822cdee30bcc611_icgraph.md5  classcicv_1_1DualQuaternion_acba9a274885c115fe363f5c7fb6eafe8_icgraph.map  (+735 more)
html/search/: all_14.js  all_17.js  all_18.js  all_2.js  all_4.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_5.js  classes_8.js  classes_e.js  classes_f.js  defines_0.js  files_0.js  files_10.js  files_3.js  files_6.js  files_7.js  files_8.js  files_b.js  files_d.js  functions_1.js  functions_12.js  functions_13.js  functions_14.js  functions_2.js  functions_3.js  functions_a.js  functions_d.js  functions_f.js  namespaces_0.js  related_0.js  typedefs_0.js  typedefs_3.js  (+12 more)
launch/: calib.launch
lidar_imu_calib/: package.xml
lidar_imu_calib/Log/: back_end_optimization_node.gj.gj.log.INFO.20220804-183240.27364  calib_lidar_imu_node.ERROR  calib_lidar_imu_node.WARNING  calib_lidar_imu_node.gj-R9000P.gj.log.ERROR.20220710-000214.11301  calib_lidar_imu_node.gj-R9000P.gj.log.ERROR.20220710-001820.17703  calib_lidar_imu_node.gj-R9000P.gj.log.ERROR.20220713-110202.17124  calib_lidar_imu_node.gj-R9000P.gj.log.ERROR.20220716-135711.3570  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220707-151824.18373  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220707-151936.19958  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220709-144838.21372  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220709-145201.23643  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220709-145339.24760  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220710-001014.14790  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220710-001202.15980  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220710-001556.16948  calib_lidar_imu_node.gj-R9000P.gj.log.INFO.20220710-004846.24563  calib_lidar_imu_node.gj-R9000P.gj.log.WARNING.20220709-144838.18272  calib_lidar_imu_node.gj-R9000P.gj.log.WARNING.20220709-145339.24760  calib_lidar_imu_node.gj-R9000P.gj.log.WARNING.20220709-165641.28608  calib_lidar_imu_node.gj-R9000P.gj.log.WARNING.20220710-004947.25173  calib_lidar_imu_node.gj-R9000P.gj.log.WARNING.20220719-145400.31767
lidar_imu_calib/cmake/: glog.cmake
lidar_imu_calib/config/: config.yaml
lidar_imu_calib/html/: DualQuaternion_8h.html  DualQuaternion_8h__dep__incl.map  DualQuaternion_8h__incl.map  DualQuaternion_8h_source.html  EigenUtils_8h__dep__incl.md5  EigenUtils_8h__incl.md5  README_8md.html  annotated.html  back__end__optimization_8cpp__incl.map  back__end__optimization_8cpp__incl.md5  back__end__optimization_8hpp__dep__incl.map  back__end__optimization_8hpp__dep__incl.md5  back__end__optimization_8hpp__incl.map  back__end__optimization_8hpp__incl.md5  back__end__optimization_8hpp_source.html  (+508 more)
msg/: Vel.msg
rviz/: calib.rviz
(+180 files in other folders)
